# CMakeQtBundleTemplate

./: .clang-format  .gitignore  CMakeLists.txt  Info.plist.in  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
